--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.11.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.0",
     "next": "latest",
+    "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
+    "prisma": "^4.11.0",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   }
