--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
+    "eslint": "^8.36.0",
     "postcss": "^8.4.18",
     "prisma": "^4.11.0",
     "tailwindcss": "^3.2.4",
